; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_util.c_ngx_http_lua_param_get.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_util.c_ngx_http_lua_param_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@ngx_http_lua_module = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"ctx not found\00", align 1
@NGX_HTTP_LUA_CONTEXT_SET = common dso_local global i32 0, align 4
@NGX_HTTP_LUA_CONTEXT_BODY_FILTER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ngx_http_lua_param_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ngx_http_lua_param_get(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32* @ngx_http_lua_get_req(i32* %6)
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %41

11:                                               ; preds = %1
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* @ngx_http_lua_module, align 4
  %14 = call %struct.TYPE_4__* @ngx_http_get_module_ctx(i32* %12, i32 %13)
  store %struct.TYPE_4__* %14, %struct.TYPE_4__** %4, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %16 = icmp eq %struct.TYPE_4__* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %11
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @luaL_error(i32* %18, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  store i32 %19, i32* %2, align 4
  br label %41

20:                                               ; preds = %11
  %21 = load i32*, i32** %3, align 8
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %23 = load i32, i32* @NGX_HTTP_LUA_CONTEXT_SET, align 4
  %24 = load i32, i32* @NGX_HTTP_LUA_CONTEXT_BODY_FILTER, align 4
  %25 = or i32 %23, %24
  %26 = call i32 @ngx_http_lua_check_context(i32* %21, %struct.TYPE_4__* %22, i32 %25)
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* @NGX_HTTP_LUA_CONTEXT_SET, align 4
  %31 = and i32 %29, %30
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %37

33:                                               ; preds = %20
  %34 = load i32*, i32** %3, align 8
  %35 = load i32*, i32** %5, align 8
  %36 = call i32 @ngx_http_lua_setby_param_get(i32* %34, i32* %35)
  store i32 %36, i32* %2, align 4
  br label %41

37:                                               ; preds = %20
  %38 = load i32*, i32** %3, align 8
  %39 = load i32*, i32** %5, align 8
  %40 = call i32 @ngx_http_lua_body_filter_param_get(i32* %38, i32* %39)
  store i32 %40, i32* %2, align 4
  br label %41

41:                                               ; preds = %37, %33, %17, %10
  %42 = load i32, i32* %2, align 4
  ret i32 %42
}

declare dso_local i32* @ngx_http_lua_get_req(i32*) #1

declare dso_local %struct.TYPE_4__* @ngx_http_get_module_ctx(i32*, i32) #1

declare dso_local i32 @luaL_error(i32*, i8*) #1

declare dso_local i32 @ngx_http_lua_check_context(i32*, %struct.TYPE_4__*, i32) #1

declare dso_local i32 @ngx_http_lua_setby_param_get(i32*, i32*) #1

declare dso_local i32 @ngx_http_lua_body_filter_param_get(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
